--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,89 +1,49 @@
 <div class="container emp-profile">
     <form method="post">
-        {{#profile user}}{{/profile}}
-
-
-        {{!-- <div class="row">
-            <div class="col-md-4">
-                <div class="profile-img">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog"
-                        alt="" />
-                    <div class="file btn btn-lg btn-primary">
-                        Change Photo
-                        <input type="file" name="file" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="profile-head">
-                    <h5>
-                        user.fullName
-                    </h5>
-                    <h6>
-                        user.className
-                    </h6>
-                    <ul class="nav nav-tabs" id="myTab" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                                aria-controls="home" aria-selected="true">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
-            </div>
-        </div> --}}
-        {{!-- <div class="row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-8">
-                <div class="tab-content profile-tab" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Mã học sinh</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.id}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Họ và tên</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>user.fullName</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>cuongcs2502@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Số điện thoại</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>123 456 7890</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Số điện thoại phụ huynh</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>000-000-000</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div> --}}
+        {{#profile user}}{{/profile}}       
     </form>
+</div>
+<div class="modal fade" id="modalEditInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form class="modal-content" action="/profile" method="POST">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Cập nhật Thông tin</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentID">Mã học sinh</label>
+                    <input name="username" type="text" id="defaultForm-studentID" class="form-control validate"
+                        value="{{user.id}}" readonly>
+                </div>
+
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học
+                        sinh</label>
+                    <input name="fullName" type="text" id="defaultForm-studentName" class="form-control validate" value="{{user.fullName}}">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentDoB">Ngày sinh</label>
+                    <input name="dob" type="number" step="0.01" min="0" max="10" id="defaultForm-studentDoB"
+                        class="form-control validate" value="{{user.dob}}">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentIdCard">CMND</label>
+                    <input name="identityCard" type="number" step="0.01" min="0" max="10" id="defaultForm-studentIdCard"
+                        class="form-control validate" value="{{user.identityCard}}">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentAddress">Địa Chỉ</label>
+                    <input name="address" type="number" step="0.01" min="0" max="10" id="defaultForm-studentAddress"
+                        class="form-control validate" value="{{user.address}}">
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger" type="submit">Xác nhận</button>
+            </div>
+        </form>
+    </div>
 </div>
