--- a/views/staff/classTable.hbs
+++ b/views/staff/classTable.hbs
@@ -23,25 +23,27 @@
             <table class="table table-bordered" id="" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>MÃ LỚP</th>
-                        <th>LỚP</th>
-                        <th>MÃ GVCN</th>
-                        <th>TÊN GVCN</th>
-                        <th>PHÒNG HỌC</th>
-                        <th>KHÓA</th>
-                        <th></th>
+                        <th style="text-align: center;">MÃ LỚP</th>
+                        <th style="text-align: center;">LỚP</th>
+                        <th style="text-align: center;">MÃ GVCN</th>
+                        <th style="text-align: center;">TÊN GVCN</th>
+                        <th style="text-align: center;">PHÒNG</th>
+                        <th style="text-align: center;">KHÓA</th>
+                        <th style="text-align: center;">TKB</th>
+                        <th style="text-align: center;">QUẢN LÝ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each listClass10}}
                     <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
+                        <td style="text-align: center;">{{classID}}</td>
+                        <td style="text-align: center;">{{className}}</td>
+                        <td style="text-align: center;">{{managerClass}}</td>
+                        <td style="text-align: center;">{{managerName}}</td>
+                        <td style="text-align: center;">{{roomID}}</td>
+                        <td style="text-align: center;">{{course}}</td>
+                        <td style="text-align: center;"><a href="{{schedule}}">Xem</a></td>
+                        <td style="text-align: center;"><a href="{{link}}">Quản lý</a></td>
                     </tr>
                     {{/each}}
 
@@ -60,25 +62,27 @@
             <table class="table table-bordered" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>MÃ LỚP</th>
-                        <th>LỚP</th>
-                        <th>MÃ GVCN</th>
-                        <th>TÊN GVCN</th>
-                        <th>PHÒNG HỌC</th>
-                        <th>KHÓA</th>
-                        <th></th>
+                        <th style="text-align: center;">MÃ LỚP</th>
+                        <th style="text-align: center;">LỚP</th>
+                        <th style="text-align: center;">MÃ GVCN</th>
+                        <th style="text-align: center;">TÊN GVCN</th>
+                        <th style="text-align: center;">PHÒNG</th>
+                        <th style="text-align: center;">KHÓA</th>
+                        <th style="text-align: center;">TKB</th>
+                        <th style="text-align: center;">QUẢN LÝ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each listClass11}}
                     <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
+                        <td style="text-align: center;">{{classID}}</td>
+                        <td style="text-align: center;">{{className}}</td>
+                        <td style="text-align: center;">{{managerClass}}</td>
+                        <td style="text-align: center;">{{managerName}}</td>
+                        <td style="text-align: center;">{{roomID}}</td>
+                        <td style="text-align: center;">{{course}}</td>
+                        <td style="text-align: center;"><a href="{{schedule}}">Xem</a></td>
+                        <td style="text-align: center;"><a href="{{link}}">Quản lý</a></td>
                     </tr>
                     {{/each}}
 
@@ -95,25 +99,27 @@
             <table class="table table-bordered" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>MÃ LỚP</th>
-                        <th>LỚP</th>
-                        <th>MÃ GVCN</th>
-                        <th>TÊN GVCN</th>
-                        <th>PHÒNG HỌC</th>
-                        <th>KHÓA</th>
-                        <th></th>
+                        <th style="text-align: center;">MÃ LỚP</th>
+                        <th style="text-align: center;">LỚP</th>
+                        <th style="text-align: center;">MÃ GVCN</th>
+                        <th style="text-align: center;">TÊN GVCN</th>
+                        <th style="text-align: center;">PHÒNG</th>
+                        <th style="text-align: center;">KHÓA</th>
+                        <th style="text-align: center;">TKB</th>
+                        <th style="text-align: center;">QUẢN LÝ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each listClass12}}
                     <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
+                        <td style="text-align: center;">{{classID}}</td>
+                        <td style="text-align: center;">{{className}}</td>
+                        <td style="text-align: center;">{{managerClass}}</td>
+                        <td style="text-align: center;">{{managerName}}</td>
+                        <td style="text-align: center;">{{roomID}}</td>
+                        <td style="text-align: center;">{{course}}</td>
+                        <td style="text-align: center;"><a href="{{schedule}}">Xem</a></td>
+                        <td style="text-align: center;"><a href="{{link}}">Quản lý</a></td>
                     </tr>
                     {{/each}}
 
